<?xml version="1.0" encoding="utf-8"?>
<!-- 로그인 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <EditText
        android:id="@+id/login_id_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_id_hint"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/login_pwd_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <CheckBox
            android:id="@+id/login_auto_login_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_auto_login_setting"/>
        <CheckBox
            android:id="@+id/login_save_id_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_save_id"/>
    </LinearLayout>

    <Button
        android:id="@+id/login_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_en"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_20">
        <TextView
            android:id="@+id/login_find_id_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_id"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" or "/>

        <TextView
            android:id="@+id/login_find_pwd_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_pwd"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/login_fogot_account_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_foget_account"/>
    </LinearLayout>



    <Button
        android:id="@+id/login_join_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_member_join"/>

</LinearLayout>