<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <com.greencross.fitness.CommonActionBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/login_id_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"/>
    <TextView
        android:id="@+id/join_step1_id_error_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:text="@string/join_step1_id_error"/>

    <EditText
        android:id="@+id/join_step1_pwd_edittext1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/join_step1_pwd_hint1"
        android:inputType="textPassword"/>
    <EditText
        android:id="@+id/join_step1_pwd_edittext2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/join_step1_pwd_hint2"
        android:inputType="textPassword"/>

    <TextView
        android:id="@+id/join_step1_pwd_error_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:text="@string/join_step1_pwd_error"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join_step1_pwd_len"/>

    <EditText
        android:id="@+id/join_step1_name_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/join_step1_name_hint2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLength="3"
            android:hint="@string/text_phone_num"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLength="4"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLength="4"/>
    </LinearLayout>

    <TextView
        android:id="@+id/join_step1_phone_num_error_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:text="@string/join_step1_phone_num_error"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/join_step1_contract1"/>
        <CheckBox
            android:id="@+id/join_step1_checkbox1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/join_step1_agree"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/join_step1_contract2"/>
        <CheckBox
            android:id="@+id/join_step1_checkbox2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/join_step1_agree"/>
    </LinearLayout>

    <TextView
        android:id="@+id/join_step1_contract_error_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:text="@string/join_step1_contract_error"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_next"/>
</LinearLayout>